--- a/css/style.css
+++ b/css/style.css
@@ -21,7 +21,7 @@ html, body {
   }
 
   body {
-    background: linear-gradient(-45deg, #fafafa, #090909);
+    background: linear-gradient(-45deg, #f05dc2, #ffffff, #23a6d5, #23d5ab);
     background-size: 400% 400%;
     animation: gradient 15s ease infinite;
     height: 100vh;
