--- a/css/style.css
+++ b/css/style.css
@@ -105,23 +105,9 @@ html, body {
     font-size: 15px;
     margin: 10px 0;
   }
-  /* styling my button */
-  
-  .white-mode {
-    text-decoration: none;
-    padding: 7px 10px;
-    background-color: #122;
-    border-radius: 3px;
-    color: #fff;
-    transition: 0.35s ease-in-out;
-    position: absolute;
-    left: 15px;
-    bottom: 15px;
-    font-family: "Montserrat";
-  }
-  
-  .white-mode:hover {
-    background-color: #fff;
-    color: #122;
-  }
-  
+.btn-left {
+  color: white;
+  font-size: 15px;
+  left: 0;
+  top: 0;
+}
