--- a/css/style.css
+++ b/css/style.css
@@ -93,6 +93,7 @@ html, body {
     flex-direction: column;
     align-items: center;
     justify-content: center;
+    margin-bottom: 40%;
     height: 100vh;
     letter-spacing: 1px;
     line-height: 2;
